Download xml for the changelogs

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -313,6 +313,7 @@ function updateContent(button) {
 			if ( result.data ) {
 				updateDisplay(result.data);
 			} else {
+				data.searchActive = true;
 				getContent(true,'INITIALIZE',"","",startupScreen);
 			}
 		}
