--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -206,7 +206,7 @@ $(function(){
 			title: 'Disclaimer',
 			text: 'All applications listed here are <span class="ca_bold">3rd party</span> additions to unRaid.  Neither the authors of Community Applications nor Limetech make any warranty as to the suitability of any application listed here. <br><span class="ca_italic"><font color="green">Every attempt is made to ensure that only safe and compatible applications are present</font></span><font size=0><br>Note: if your flash drive is corrupted you may also see this message and it will need to be fixed first</font>',
 			html: true,
-			type: 'error',
+			type: 'warning',
 			showCancelButton: true,
 			showConfirmButton: true,
 			confirmButtonText: 'I Understand'
@@ -626,7 +626,7 @@ function dockerConvert(dockerID) {
 function openNewWindow(newURL) {
 	var popUp = window.open(newURL,"_self");
 	if ( !popUp || popUp.closed || typeof popUp == "undefined" ) {
-		addBannerWarning("CA requires popups to be enabled under certain circumstances.  You must white list your server within your browser to allow popups");
+		addBannerWarning("Popup Blocked.  CA requires popups to be enabled under certain circumstances.  You must white list your server within your browser to allow popups",true,true);
 	}
 }
 
@@ -1237,7 +1237,7 @@ function getCategories() {
 function feedWarning(currentServer) {
 	if ( currentServer != "Primary Server" ) {
 		if ( !backupServerWarning ) {
-			backupServerWarning = addBannerWarning("Backup Server Active.  Some icons may not appear, and plugin installations may be affected");
+			backupServerWarning = addBannerWarning("Backup Server Active.  Some icons may not appear, and plugin installations may be affected",true,true);
 		} else {
 			removeBannerWarning(backupServerWarning);
 			backupServerWarning = false;
