Close any modals if a syntax error in exec happens

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1170,6 +1170,7 @@ function post(options,callback) {
 				}
 			} catch(e) {
 				alert("Error from POST call "+options.action+".  "+stripTags(retval));
+				myCloseAlert();
 				var result = retval;
 			}
 			console.groupCollapsed("Result "+options.action);
