Fix Menu wasn't getting highlighted again after leaving and returning to CA

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1221,7 +1221,7 @@ function getCategories() {
 		$("#category_list").html(result.categories);
 		if ( restoreStateMenu ) {
 			console.log(restoreStateMenu);
-			if ( restoreStateMenu && ! data.searchFlag) {
+			if ( restoreStateMenu && ! evaluateBoolean(data.searchFlag) ) {
 				var menuItem = $.find(".caMenuItem[data-category='"+restoreStateMenu+"']");
 				$(".caMenuItem").each(function(){
 					$(this).removeClass("selectedMenu");
