Fix.  See below
After installing from startup page and then going to installed / previous / pinned, sort orders would be wrong

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -532,8 +532,13 @@ function getSortOrder() {
 			}
 		}
 	});
-	if ( ! sortOrder.sortBy ) {
+	if ( ! sortOrder.sortBy && ! isIconEnabled("#sortIcon")) {
 		sortOrder.sortBy = ["sortBy","noSort"];
+	} else {
+		sortOrder.sortBy = ["sortBy","Name"];
+		sortOrder.sortDir = ["sortDir","Up"];
+		var sortIcon = $.find(".sortIcons[data-sort='nameUp']");
+		$(sortIcon).addClass("enabledIcon");
 	}
 	return [sortOrder.sortBy,sortOrder.sortDir];
 }
