--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -15,13 +15,15 @@ $plugin = "community.applications";
 require_once "/usr/local/emhttp/plugins/$plugin/include/paths.php";
 require_once "/usr/local/emhttp/plugins/$plugin/include/helpers.php";
 
+$SESSION_NAME = session_name();
+
 $cfg = parse_plugin_cfg($plugin);
 if ( ! is_file($caPaths['warningAccepted']) ) {
 	$firstRun = "true";
 }
 $unRaidSettings = parse_ini_file($caPaths['unRaidVersion']);
-$unRaid66 = version_compare($unRaidSettings['version'],"6.5.3",">");
-$unRaid68 = version_compare($unRaidSettings['version'],"6.7.9",">");
+$unRaid66 = version_compare($unRaidSettings['version'],"6.5.3",">") ?: 0; // Needs to be 0 as the pre-processor evaluates false instead as null
+$unRaid68 = version_compare($unRaidSettings['version'],"6.7.9",">") ?: 0;
 
 if ( is_file($caPaths['addConverted']) ) {
 	$dockerConvertFlag = "true";
@@ -1174,9 +1176,14 @@ function post(options,callback) {
 					alert(result.error);
 				}
 			} catch(e) {
-				alert("Error from POST call "+options.action+".  "+stripTags(retval));
-				myCloseAlert();
-				var result = retval;
+				if ( ! $.cookie("<?=$SESSION_NAME?>") && <?=$unRaid68?> ) {
+					alert("You have been logged out");
+					window.parent.location.reload();
+				} else {
+					alert("Error from POST call "+options.action+".  "+stripTags(retval));
+					myCloseAlert();
+					var result = retval;
+				}
 			}
 			console.groupCollapsed("Result "+options.action);
 			console.timeEnd(options.action);
